Switching internal structure of Grid to Set<Cell> incapsulating the Position inside of Cell entity